style.css
body {
    font-family: 'Roboto', sans-serif;
    letter-spacing: 0.1em;
    margin: 0;
    overflow-x: hidden;
}

ul {
    list-style-type: none;
}

a {
    color: black;
    text-decoration: none;
}

.visually-hidden {
    border: 0;
    clip: rect(0, 0, 0, 0);
    height: 0.063rem;
    margin: -0.063rem;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 0.063rem;
}

.button {
    border: 0.063rem solid black;
    border-radius: 3.125rem;
    padding: 0.438rem 1rem;
    background-color: white;
    font-weight: 700;
}

.button:hover {
    cursor: pointer;
}

.header {
    position: fixed;
    background-color: white;
    width: 100%;
    top: 0;
    z-index: 3;
}

.logo {
    width: 80px;
    height: 80px;
    padding: 0 1.25rem;
}

.header-items {
    display: flex;
    justify-content: space-between;
}

.menu {
    border-bottom: 1px solid #d0d0d0;
    padding-left: 0;
}

.menu-and-login {
    width: 80%;
    padding-top: 4.063rem;
    background-color: white;
    right: 0;
    height: 100vh;
    position: absolute;
    padding-left: 1.25rem;
}

.menu li {
    padding: 1rem 2rem;
}

.sign-in-button {
    margin-right: 1rem;
}

.sign-in-button:hover {
    background-color: #f3f1e7;
}

.join-button {
    background-color: black;
    color: white;
}

.find-store {
    font-weight: 700;
    position: fixed;
    margin-top: 3.125rem;
}

.find-store:hover {
    color: #008248;
}

.location-icon {
    background: url('/images/pin.svg') no-repeat;
    position: absolute;
    width: 100%;
    height: 100%;
}

.location {
    margin-left: 1.875rem;
}

.user-login-items {
    padding-top: 1.25rem;
    padding-left: 1.25rem;
}

.menu-button {
    border: none;
    background: url('./images/menu.svg');
    width: 24px;
    height: 24px;
    position: fixed;
    margin-top: 1.875rem;
    right: 1.25rem;
}

.subheader {
    background-color: #1e3932;
    width: 100%;
    color: white;
    padding: 1.063rem;
    font-weight: 700;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}

.join-app-button {
    color: white;
    border: 0.063rem solid white;
    background-color: transparent;
    position: fixed;
    right: 1rem;
}

.main-section {
    text-align: center;
    padding: 2rem 1.5rem;
    margin-top: 3.125rem;
}

.page-title {
    font-weight: 600;
    font-size: 2rem;
    line-height: 1.29;
    padding-top: 3.2rem;
}

.join-now-button {
    border: none;
    background-color: #008248;
    color: white;
    font-size: 1rem;
    margin-top: 2rem;
}

.join-app-link {
    text-decoration: underline;
}

.main-section {
    text-align: center;
    background-color: rgb(212, 233, 226);
    background-image: url('images/hero-mobile.jpg');
    background-size: cover;
    background-repeat: no-repeat;
    padding-bottom: 50vh;
}

.getting-started-section {
    margin: 4.5rem 0;
    padding: 0 1rem;
}

.getting-started-list {
    padding-top: 2.3rem;
    text-align: left;
    padding-left: 1rem;
}

.page-title-smaller {
    text-align: center;
    font-weight: 600;
    font-size: 2rem;
}

.page-text {
    text-align: center;
}

.getting-started-num {
    border: 2px solid #008248;
    padding: 0.5rem;
    border-radius: 50px;
    width: 30px;
    height: 30px;
    color: #008248;
    font-weight: 700;
    display: inline-block;
    float: left;
    margin-right: 1rem;
    font-size: 1.3rem;
    text-align: center;
}

.getting-started-title {
    font-weight: 600;
    font-size: 1.2rem;
}

.steps-link {
    text-decoration: underline;
    color: #008248;
}

.getting-started-item {
    padding-bottom: 2rem;
}

.tabs-section {
    background-color: #f1f8f6; 
    padding-top: 2rem;
    padding-bottom: 8rem;
}

.tabs {
    margin: 0 auto;
    padding-top: 3rem;
    text-align: center;
    background-color: #f1f8f6;
    display: flex;
    justify-content: center;
}

.tab-details {
    align-self: center;
    padding: 0 1.5rem;
}

.tab-details h4 {
    font-size: 1.5rem;
}

.tab-button {
    cursor: pointer;
    width: 70px;
    display: inline-block;
    background: transparent;
    color:black;
    text-align: center;
    border: none;
    padding: 0.5rem 0.5rem 1rem;
    font-weight: 600;
    font-size: 1.5rem;
}

.tab-button:active {
    box-shadow: inset 0 -6px #008248;
}

input:checked + .tab-button {
    box-shadow: inset 0 -6px #008248;
}

input {
    opacity: 0;
}

input:checked + .tab-button + .tab-content {
    display: block;
    position: absolute;
    background-color:#d4e9e2;
    left: 0;
    outline: none;
    padding-top: 3rem;
    padding-bottom: 3rem;
    z-index: 1;
}

.tab-content {
    display: none;
    color: black;
    text-align: center;
    box-shadow: inset 0 7px 9px -7px rgb(0 0 0 / 14%);
    justify-content: center;
    height: auto;
}

.tab {
    display: inline-block;
}

.tab:focus {
    outline: none;
}

.tab-star {
    color: #cba258;
    font-size: 1rem;
}

.tab-img {
    width: 90%;
}

.extras-section {
    padding-top: 8rem;
    margin-top: 27rem;
}

.extras-img {
    max-width: 100%;
    height: auto;
    padding-right: 1rem;
    align-self: center;
}

.extras-item {
    display: flex;
}

.extras-desc {
    width: 100%;
}

.collect-section {
    padding-top: 3rem;
    background-color: #f3f1e7;
}

.collect-div {
    display: block;
    margin-top: 6rem;
}

.earn-options {
    display: block;
}

.earn-star-div {
    display: flex;
}

.earn-img {
    align-self: center;
    padding-right: 1rem;
}

.earn-title {
    font-weight: 600;
    font-size: 1.2rem;
}

@media only screen and (min-width: 785px){
    .header-items {
        justify-content: flex-start;
        padding-bottom: 0.438rem;
    }

    .menu {
        display: flex;
        border-bottom: none;
    } 

    .menu li {
        padding: 1rem 0.938rem;
    }

    .menu-and-login {
        display: flex;
        width: auto;
        padding-top: 0;
        right: auto;
        height: auto;
        position: initial;
        padding-left: 0;
    }

    .menu-link {
        text-transform: uppercase;
        font-weight: 700;
        padding-bottom: 2.5rem;
    }

    .menu-link:hover, .menu-link:active {
        box-shadow: inset 0 -6px #008248;
    }

    .user-login-items {
        align-self: center;
        right: 2.5rem;
        position: fixed;
        padding-top: 0;
        padding-left: 0; 
    }

    .find-store {
        margin-right: 2.5rem;  
        position: initial; 
        margin-top: 0;   
    }

    .location-icon {
        background: url('/images/pin.svg') no-repeat left;
    }

    .rewards-title {
        padding-left: 6.188rem;
    }   

    .main-section {
        text-align: left;
        background-color: rgb(212, 233, 226);
        background-image: url('images/hero-desktop.png');
        background-position: 50%;
        background-repeat: no-repeat;
        background-size: auto 100%;
        padding-top: 22%;
        padding-bottom: 22%;
    }

    .page-title {
        font-size: 2.2rem;
        padding-top: 0;
    }

    .page-subtitle {
        font-size: 1.2rem;
    }

    .getting-started-section {
        margin: 8rem 0;
    }

    .getting-started-list {
        display: flex;
        justify-content: space-evenly;
        text-align: center;
        margin: 0 5vw;
        padding-left: 0;
    }

    .page-title-smaller {
        font-size: 2rem;
    }

    .getting-started-num {
        float: none;
        margin-right: 0;
    }

    .getting-started-item {
        margin-right: 2.4rem;
        padding-bottom: 0;
    }

    input:checked + .tab-button + .tab-content {
        display: flex;
    }
    
    .tab-content {
        text-align: left;
        height: 200px;
        width: 100%;
    }

    .tab-details {
        width: 30vw;
        margin-left: 2rem;
        padding: 0;
    }

    .tab-img {
        margin-right: 2rem;
        width: auto;
    }

    .extras-img {
        padding-left: 0;
        align-self: auto;
    }

    .extras-item {
        display: block;
    }

    .extras-desc {
        width: 60%;
        margin: 0 auto;
    }
}

@media only screen and (min-width: 786px) and (max-width: 1024px) {
    .collect-div {
        display: block;
    }

    .earn-options {
        display: flex;
    }
}

@media only screen and (min-width: 1025px) {
    .collect-div {
        display: flex;
    }

    .earn-options {
        display: flex;
    }

    .earn-star-div {
        padding-left: 1.5rem;
    }

    .earn-item {
        width: 33%;
    }

    .collect-section {
        padding: 3rem 3rem;
    }
}

